                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 18-11-2005 updated: Spanish language file (Thnx to jose_t)
 - 18-11-2005 updated: Norwegian language file (Thnx to vnm)
 - 18-11-2005 updated: Korean language file (Thnx to AkoXko)
 - 18-11-2005 updated: Italian language file (Thnx to kotix)
 - 18-11-2005 updated: German language file
 - 18-11-2005 updated: French language file (Thnx to flymaster)
 - 18-11-2005 updated: Finnish language file (Thnx to jutski)
 - 18-11-2005 updated: Danish language file (Thnx to hugener)
 - 18-11-2005 updated: Chinese (Traditional) language file (Thnx to omenpica)
 - 18-11-2005 cleanup: Removed some code duplication of the the delete/rename code in Pictures/Video/Music.
 - 17-11-2005 fixed: Location of the video preview window was incorrectly calibrated.
 - 16-11-2005 changed: sf bug #1301380 System info - Wrong HDD Key info! Removed until the detection is rewrote! [GeminiServer]
 - 16-11-2005 fixed: sf bug #1348614: ftp client: opening/copying folders with ."dot" should work again! [GeminiServer]
 - 16-11-2005 added: sf patch #1348694 F and G partition support to FEH [GeminiServer]
 - 15-11-2005 added: Skin Theme Support: [GeminiServer]	
		     Skin Themes, simply loading different Texture.xpr files from the current selected skin! To create new Themes, just add. a new MyThemaRed.xpr to the \Skin\SkinName\media\*.*,which contained Theme referenced pictures!
                     You can also use more Themes and the shared files [picutes] can be in root of \media, which will be used if they are not in the defined theme!