@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 19-11-2005 added: you can now use relative paths in combination with $HOME in xboxmediacenter.xml. hi to jjsmither. WARNING: REMEMBER THAT $HOME IS Q:\ BY DEFAULT, NOT THE ACTUAL XBMC DIRECTORY PATH.
  - 18-11-2005 updated: Spanish language file (Thnx to jose_t)
  - 18-11-2005 updated: Norwegian language file (Thnx to vnm)
  - 18-11-2005 updated: Korean language file (Thnx to AkoXko)
